--- a/Functions_custo_by_Nico.ipynb
+++ b/Functions_custo_by_Nico.ipynb
@@ -896,6 +896,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a87a67fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_learning_curves_iou_dice(history, model_name):\n",
+    "    iou = history.history[\"iou_score\"]\n",
+    "    val_iou = history.history[\"val_iou_score\"]\n",
+    "\n",
+    "    fscore = history.history[\"f1-score\"]\n",
+    "    val_fscore = history.history[\"val_f1-score\"]\n",
+    "\n",
+    "    loss = history.history[\"loss\"]\n",
+    "    val_loss = history.history[\"val_loss\"]\n",
+    "    epochs_range=range(1, len(iou) + 1)\n",
+    "    #epochs_range = range(n_epochs)\n",
+    "\n",
+    "    fig = plt.figure(figsize=(15,5))\n",
+    "\n",
+    "    plt.subplot(1,3,1)\n",
+    "    plt.plot(epochs_range, iou, label=\"train iou_score\")\n",
+    "    plt.plot(epochs_range, val_iou, label=\"validataion iou_score\")\n",
+    "    plt.title(\"iou_score\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.ylabel(\"iou_score\")\n",
+    "    plt.legend(loc=\"upper left\")\n",
+    "\n",
+    "    plt.subplot(1,3,2)\n",
+    "    plt.plot(epochs_range, fscore, label=\"train Dice coeff\")\n",
+    "    plt.plot(epochs_range, val_fscore, label=\"validataion Dice coeff\")\n",
+    "    plt.title(\"f1-score or Dice coeff\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.ylabel(\"f1-score\")\n",
+    "    plt.legend(loc=\"upper left\")\n",
+    "\n",
+    "    plt.subplot(1,3,3)\n",
+    "    plt.plot(epochs_range, loss, label=\"train loss\")\n",
+    "    plt.plot(epochs_range, val_loss, label=\"validataion loss\")\n",
+    "    plt.title(\"Loss\")\n",
+    "    plt.xlabel(\"Epoch\")\n",
+    "    plt.ylabel(\"Loss\")\n",
+    "    plt.legend(loc=\"upper right\")\n",
+    "\n",
+    "    plt.suptitle(f\"IoU Socre, Dice Coeff and Loss evolution during {model_name} training, (stopped by callback at epochs : {len(iou)})  \")\n",
+    "    #fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8fbd7c54",
    "metadata": {},
@@ -1859,6 +1909,38 @@
     "    outputs = Conv2D(8, (1, 1), activation='softmax')(c9)\n",
     "    model = Model(inputs=[input_img], outputs=[outputs])\n",
     "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0489a8ca",
+   "metadata": {},
+   "source": [
+    "## UNET Metrics and Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ef3d88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dice_coeff(y_true, y_pred):\n",
+    "    smooth = 1.\n",
+    "    y_true_f = K.cast(K.flatten(y_true), K.floatx()) #K.flatten(y_true) #\n",
+    "    y_pred_f = K.cast(K.flatten(y_pred), K.floatx()) #K.flatten(y_pred) #\n",
+    "    intersection = K.sum(y_true_f * y_pred_f)\n",
+    "    score = (2. * intersection + smooth) / (K.sum(y_true_f) + K.sum(y_pred_f) + smooth)\n",
+    "    return score\n",
+    "\n",
+    "def dice_loss(y_true, y_pred):\n",
+    "    loss = 1 - dice_coeff(y_true, y_pred)\n",
+    "    return loss\n",
+    "\n",
+    "def total_loss(y_true, y_pred):\n",
+    "    loss = binary_crossentropy(y_true, y_pred) + (3*dice_loss(y_true, y_pred))\n",
+    "    return loss"
    ]
   },
   {
