Model UNET commit with several metrics and loss functions

--- a/data_generator.ipynb
+++ b/data_generator.ipynb
@@ -1492,109 +1492,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # DATALOADER - Notre classe hérite de la classe Keras.utils.Sequence\n",
-    "# # Elle permet de créer un générateur de données\n",
-    "# # Cette classe parente vous assure dans le cas ou vous souhaitez utiliser du calcul parallèle avec vos threads, de garantir de parcourir une seule et unique fois vos données au cours d’une époch\n",
-    "# class GeneratorCitySpace(keras.utils.Sequence):\n",
-    "#     \"\"\"Load data from dataset to build bacthes\n",
-    "#     Args:\n",
-    "#         dataset : dataframe listing data and paths\n",
-    "#         n_sample : to work with a reduced dataset\n",
-    "#         batch_size: Integet number of images in batch.\n",
-    "#         resize_width & resize_height: New dimensions after resizing\n",
-    "#         phase: allow to set if dataloader shall filter on train, val or test images/masks\n",
-    "#         augmentation: Variable defining augmentation of image and mask\n",
-    "#     \"\"\"\n",
-    "#     # We provide one dataset, containing labelIds Masks and Images\n",
-    "#     def __init__(self, dataset, n_sample, batch_size=1, resize_width=256, resize_height=128, phase='train', augmentation=None):\n",
-    "#         self.n_sample = n_sample\n",
-    "#         self.phase = phase\n",
-    "#         self.dataset = dataset.loc[dataset['Phase'] == self.phase, :].sample(self.n_sample) #ou dataset si on veut prendre tour le jeu de donnée\n",
-    "#         self.batch_size = batch_size\n",
-    "#         self.resize_width = resize_width\n",
-    "#         self.resize_height = resize_height\n",
-    "#         self.augmentation = augmentation\n",
-    "#         self.on_epoch_end()\n",
-    "\n",
-    "#     CATS = {\n",
-    "#         'void': [0, 1, 2, 3, 4, 5, 6],\n",
-    "#         'flat': [7, 8, 9, 10],\n",
-    "#         'construction': [11, 12, 13, 14, 15, 16],\n",
-    "#         'object': [17, 18, 19, 20],\n",
-    "#         'nature': [21, 22],\n",
-    "#         'sky': [23],\n",
-    "#         'human': [24, 25],\n",
-    "#         'vehicle': [26, 27, 28, 29, 30, 31, 32, 33,-1]\n",
-    "#     }\n",
-    "    \n",
-    "#     def _convert_mask(self,img):\n",
-    "#         if len(img.shape) == 3:\n",
-    "#             img = np.squeeze(img[:, :, 0])\n",
-    "#         else:\n",
-    "#             img = np.squeeze(img)\n",
-    "#         mask = np.zeros((img.shape[0], img.shape[1], 8),dtype=np.uint8)\n",
-    "#         for i in range(-1, 34):\n",
-    "#             if i in self.CATS['void']:\n",
-    "#                 mask[:,:,0] = np.logical_or(mask[:,:,0],(img==i))\n",
-    "#             elif i in self.CATS['flat']:\n",
-    "#                 mask[:,:,1] = np.logical_or(mask[:,:,1],(img==i))\n",
-    "#             elif i in self.CATS['construction']:\n",
-    "#                 mask[:,:,2] = np.logical_or(mask[:,:,2],(img==i))\n",
-    "#             elif i in self.CATS['object']:\n",
-    "#                 mask[:,:,3] = np.logical_or(mask[:,:,3],(img==i))\n",
-    "#             elif i in self.CATS['nature']:\n",
-    "#                 mask[:,:,4] = np.logical_or(mask[:,:,4],(img==i))\n",
-    "#             elif i in self.CATS['sky']:\n",
-    "#                 mask[:,:,5] = np.logical_or(mask[:,:,5],(img==i))\n",
-    "#             elif i in self.CATS['human']:\n",
-    "#                 mask[:,:,6] = np.logical_or(mask[:,:,6],(img==i))\n",
-    "#             elif i in self.CATS['vehicle']:\n",
-    "#                 mask[:,:,7] = np.logical_or(mask[:,:,7],(img==i))\n",
-    "#         return np.array(np.argmax(mask,axis=2), dtype='uint8')\n",
-    "\n",
-    "#     def __getitem__(self, i):\n",
-    "#         # collect batch images and masks\n",
-    "#         start = i * self.batch_size\n",
-    "#         stop = (i + 1) * self.batch_size\n",
-    "#         images = []\n",
-    "#         masks = []\n",
-    "#         for j in range(start, stop):\n",
-    "#             # OpenImages and masks, and apply resize + mask color conversion + Normalization\n",
-    "#             image = cv2.normalize(cv2.resize(cv2.imread(list(self.dataset['Path_x'])[j]), (self.resize_width, self.resize_height), interpolation = cv2.INTER_AREA), None, 0, 255, cv2.NORM_MINMAX) #image/255 ou normalizedImg\n",
-    "#             mask = cv2.normalize(self._convert_mask(cv2.resize(cv2.imread(list(self.dataset['Path_y'])[j]), (self.resize_width, self.resize_height), interpolation = cv2.INTER_AREA))  , None, 0, 255, cv2.NORM_MINMAX) #mask/255\n",
-    "            \n",
-    "#             if ((self.augmentation is not None) & (self.phase == 'train')):\n",
-    "#                 # apply augmentations\n",
-    "#                 sample = self.augmentation(image=image, mask=mask)\n",
-    "#                 augmented_image, augmented_mask = sample['image'], sample['mask'] \n",
-    "#                 # append augmented image and mask to batch\n",
-    "#                 images.append(augmented_image)\n",
-    "#                 masks.append(augmented_mask)\n",
-    "                    \n",
-    "#             # append image and mask to batch\n",
-    "#             images.append(image)\n",
-    "#             masks.append(mask)   \n",
-    "            \n",
-    "#         # transpose list of lists = Data Generator outputs\n",
-    "#         image_batch = np.stack(images, axis=0) \n",
-    "#         #mask_batch = np.stack(masks, axis=0) \n",
-    "#         #Add 1 dimension to return image_batch and mask_batch in 4 dimensions (batch number, height, width, channels), avec channel = 1 pour les masques et =3 pour les images\n",
-    "#         #if len(mask_batch.shape) == 3:\n",
-    "#         mask_batch = np.expand_dims(np.stack(masks, axis=0), axis = 3)\n",
-    "#         # Data Generator outputs\n",
-    "#         return image_batch, mask_batch\n",
-    "    \n",
-    "#     def __len__(self):\n",
-    "#         \"\"\"Denotes the number of batches per epoch\"\"\"\n",
-    "#         return len(self.dataset) // self.batch_size\n",
-    "    \n",
-    "#     def on_epoch_end(self):\n",
-    "#         \"\"\"Callback function to shuffle dataset each epoch\"\"\"\n",
-    "#         np.random.shuffle(self.dataset.values)"
+    "# # DATALOADER - Voir Fichier Function_custo_by_Nico"
    ]
   },
   {
@@ -1648,96 +1550,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Création du modèle UNET\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from unet_model import *\n",
+    "# Création du modèle UNET\n",
     "\n",
-    "import skimage.io as io\n",
-    "import skimage.transform as trans\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras import layers, utils\"\n",
-    "from tensorflow.keras import backend # ATTENTION A VERIFIER \"backend as keras\"\n",
-    "from tensorflow.keras.models import Model\n",
-    "\n",
-    "# from tensorflow.keras.models import *\n",
-    "# from tensorflow.keras.layers import *\n",
-    "from tensorflow.keras.utils import Sequence\n",
-    "from tensorflow.keras.utils import to_categorical\n",
-    "\n",
-    "from tensorflow.keras.optimizers import *\n",
-    "from tensorflow.keras.callbacks import ModelCheckpoint, LearningRateScheduler\n",
-    "\n",
-    "\n",
-    "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, UpSampling2D, concatenate, Conv2DTranspose, BatchNormalization, Dropout, Lambda\n",
-    "from tensorflow.keras.layers import Activation, MaxPool2D, Concatenate\n",
-    "\n",
-    "from tensorflow.keras.applications import VGG16\n",
-    "from tensorflow.keras.applications import ResNet50"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Divide the number of images in directory by batch_size \n",
-    "n_sample = 20\n",
-    "batch_size = 1\n",
-    "shuffle = True\n",
-    "resize = True\n",
-    "resize_width = 512\n",
-    "resize_height = 512\n",
-    "convert_mask = None\n",
-    "display_image_mask = False\n",
-    "phase = 'train'\n",
-    "augmentation = None \n",
-    "normalization = True\n",
-    "\n",
-    "learning_rate = 1e-4\n",
-    "\n",
-    "# Generators\n",
-    "train_generators = Dataloader(clean_df, n_sample, batch_size, shuffle, resize, resize_width, resize_height, convert_mask, display_image_mask, 'train', augmentation, normalization)\n",
-    "#train_images, train_masks = Dataloader(clean_df, n_sample, batch_size, shuffle, resize, resize_width, resize_height, convert_mask, display_image_mask, 'train', augmentation, normalization)\n",
-    "val_generators = Dataloader(clean_df, n_sample, batch_size, shuffle, resize, resize_width, resize_height, convert_mask, display_image_mask, 'val', augmentation, normalization)\n",
-    "#val_images, val_masks = Dataloader(clean_df, n_sample, batch_size, shuffle, resize, resize_width, resize_height, convert_mask, display_image_mask, 'val', augmentation, normalization)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\blanc\\OpenClassrooms\\IA_Project8_Openclassrooms_VoitureAutonome\\Dataset\\P8_Cityscapes_leftImg8bit_trainvaltest\\leftImg8bit\\train\\cologne\\cologne_000134_000019_leftImg8bit.png\n",
-      "----------------Image and Mask 1 from batch collected-----------------\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(1, 512, 512, 1)"
-      ]
-     },
-     "execution_count": 200,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_generators[1][1].shape"
+    "Dans le notebook suivant, nous créerons notre premier Model de segmentation sémantic, sur la base UNET\n"
    ]
   },
   {
