Segmentation Models are compared with visualisation

--- a/Functions_custo_by_Nico.ipynb
+++ b/Functions_custo_by_Nico.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a3eaf0a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "a10a034b",
    "metadata": {},
@@ -14,11 +22,11 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "\n",
-    "#import seaborn as sns\n",
-    "#sns.set_theme()\n",
-    "#sns.set_palette(\"Greens_d\")\n",
-    "#sns.light_palette(\"seagreen\", as_cmap=True)\n",
-    "#sns.color_palette(\"Greens_d\")\n",
+    "import seaborn as sns\n",
+    "sns.set_theme()\n",
+    "sns.set_palette(\"Greens_d\")\n",
+    "sns.light_palette(\"seagreen\", as_cmap=True)\n",
+    "sns.color_palette(\"Greens_d\")\n",
     "\n",
     "#import plotly.express as px\n",
     "import tarfile\n",
@@ -1630,6 +1638,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c49d707e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_map = {\n",
+    "    '0': [0,0,0],\n",
+    "    '1': [128,64,128],\n",
+    "    '2': [70,70,70],\n",
+    "    '3': [250,170,30],\n",
+    "    '4': [107,142,35],\n",
+    "    '5': [70,130,180],\n",
+    "    '6': [255,0,0],\n",
+    "    '7': [0,0,255]\n",
+    "    }\n",
+    "\n",
+    "def predict_display_mask(image):\n",
+    "    alpha = 0.5\n",
+    "    dims = image.shape\n",
+    "    print(dims)\n",
+    "    w = cv2.resize(image, (512, 256))\n",
+    "    w = w/255\n",
+    "    x = np.expand_dims(w, axis=0)\n",
+    "    z = final_model.predict(x) \n",
+    "    z = z[0]\n",
+    "    z = cv2.resize(z, (dims[1], dims[0]))\n",
+    "    y = np.argmax(z, axis=2)\n",
+    "    \n",
+    "    mask = image.copy()   \n",
+    "    for i in range(dims[0]):\n",
+    "        for j in range(dims[1]):\n",
+    "            mask[i, j] = color_map[str(y[i, j])]\n",
+    "    mask = cv2.addWeighted(image, alpha, mask, 1-alpha, 0, mask)\n",
+    "    return mask"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7034902d",
    "metadata": {},
@@ -1956,7 +2002,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('IA_Project8_tf_gpu')",
+   "display_name": "Python 3.7.13 ('IA_Project8_gpu')",
    "language": "python",
    "name": "python3"
   },
@@ -1974,7 +2020,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "1f1d47f269b93e41448a34bb5a1a0228ca81825d68373673cfd6b3768418f56c"
+    "hash": "37e82b8de0ca04c20a1bf396b25e4fddd9a4c7101b46cea8b1ecc1a92174473c"
    }
   }
  },
